# bigbluebutton-room-media-connector

./: .gitignore  README.md
.github/workflows/: build-plugin-deb-package.yml  lint-python.yml  publish-on-pypi.yml  test-pairing-server.yml
appliance-application/: .electron-builder.config.js  README.md  package.json  settings.json  tailwind.config.js
html-plugin/: .setup-build-dependencies.sh  README.md  package-lock.json  package.json  pluginConfig.json  response.json  webpack.config.js
html-plugin/debian/: changelog  control  copyright  rules
html-plugin/src/: index.tsx
html-plugin/src/room-media-plugin/: RoomMediaPlugin.tsx  component.tsx  style.css  types.ts
html-plugin/src/room-media-plugin/Shared/: ConfirmationComponent.tsx  LayoutComponent.tsx  LoaderComponent.tsx  PinComponent.tsx
html-plugin/src/room-media-plugin/libs/: apolloClient.ts  mutations.ts
pairing-server/: README.md  app.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
pairing-server/bbb_pairing_server/: app.py
pairing-server/test/: test_room.py
